src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Name__c</fullName>
        <inlineHelpText>Descriptive name for the Address.</inlineHelpText>
        <label>Address Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <inlineHelpText>For the associated Address Entity Account, select the type of address this record represents. Physical (physical location), Bill To (billing address), or Ship To (shipping address).</inlineHelpText>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Architect_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building Architect Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Building Architect)</relationshipLabel>
        <relationshipName>Addresses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Consulting_Engineer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building Consulting Engineer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Building Consulting Engineer)</relationshipLabel>
        <relationshipName>Addresses5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Developer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building Developer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Building Developer)</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Manager_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building Manager Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Building Manager)</relationshipLabel>
        <relationshipName>Addresses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Mechanical_Contractor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building Mechanical Contractor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Building Mechanical Contractor)</relationshipLabel>
        <relationshipName>Addresses4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCW_Active_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is populated by the DCW ETL integration.</description>
        <inlineHelpText>If this is box is checked this is an Active DCW Address</inlineHelpText>
        <label>DCW Active Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCW_ID__c</fullName>
        <externalId>true</externalId>
        <label>DCW ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Country__c</fullName>
        <description>Visible only for Admins</description>
        <inlineHelpText>Visible only for Admins</inlineHelpText>
        <label>DW Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_State__c</fullName>
        <description>Visible only for Admins</description>
        <inlineHelpText>Visible only for Admins</inlineHelpText>
        <label>DW State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Entity Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the address shown is 1) Job Address for an Order OR 2) Location of a piece of equipment (Asset).</inlineHelpText>
        <label>Equipment Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Contractor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (General Contractor)</relationshipLabel>
        <relationshipName>General_Contractor_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geographic_Location__c</fullName>
        <inlineHelpText>Latitude and Longitude values for this address.</inlineHelpText>
        <label>Geographic Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IE_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this record is part of the integration with IE.</inlineHelpText>
        <label>IE Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_ID__c</fullName>
        <externalId>true</externalId>
        <label>IE ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Sync_Status__c</fullName>
        <description>Status that gets set when attributes on the record are updated and therefore needs to be sent to the IE system.</description>
        <inlineHelpText>Pending =  Record needs to be sent to the IE system. 
Processed = Record was successfully received by IE system.
Error = Record was not successfully received by IE system.</inlineHelpText>
        <label>IE Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_Updated_Date__c</fullName>
        <inlineHelpText>IE system date for when the record was last updated in the IE database.</inlineHelpText>
        <label>IE Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Mail_To__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this is a Mailing Address for the associated Account Entity.</inlineHelpText>
        <label>Is Mail To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Billto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Bill-To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if address is the Primary Ship To Address for the associated Entity Account.</inlineHelpText>
        <label>Is Primary Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this is a Shipping Address for the associated Account Entity.</inlineHelpText>
        <label>Is Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Id__c</fullName>
        <label>Oracle Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Owner)</relationshipLabel>
        <relationshipName>Owner_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Usage__c</fullName>
        <description>Designed to show other systems that use the information in this record and for the purpose of preventing record deletion.</description>
        <label>Record Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DCW</fullName>
                </value>
                <value>
                    <fullName>DW</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_ISO_Code__c</fullName>
        <label>State/Province ISO Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acklins</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Ahuachapán</fullName>
                </value>
                <value>
                    <fullName>Aisén del General Carlos Ibáñez del Campo</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alajuela</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Alta Verapaz</fullName>
                </value>
                <value>
                    <fullName>Alto Paraguay</fullName>
                </value>
                <value>
                    <fullName>Alto Paraná</fullName>
                </value>
                <value>
                    <fullName>Amambay</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Ancash</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Anse la Raye</fullName>
                </value>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Antofagasta</fullName>
                </value>
                <value>
                    <fullName>Anzoátegui</fullName>
                </value>
                <value>
                    <fullName>Apure</fullName>
                </value>
                <value>
                    <fullName>Apurímac</fullName>
                </value>
                <value>
                    <fullName>Aragua</fullName>
                </value>
                <value>
                    <fullName>Arauca</fullName>
                </value>
                <value>
                    <fullName>Araucanía</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse_Id__c</fullName>
        <description>DW BillTo: src_dw_cust_billto.dw_Customer_BillTo_Key
DW Job: &quot;J-&quot; + generated ID from SFDC Integrations dba
DW DCW: &quot;D-&quot; + generated ID from SFDC Integrations dba</description>
        <externalId>true</externalId>
        <inlineHelpText>DW BillTo: src_dw_cust_billto.dw_Customer_BillTo_Key
DW Job: &quot;J-&quot; + generated ID from SFDC Integrations dba
DW DCW: &quot;D-&quot; + generated ID from SFDC Integrations dba</inlineHelpText>
        <label>Warehouse Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Address_Line_1__c</columns>
        <columns>Address_Line_2__c</columns>
        <columns>Address_Line_3__c</columns>
        <columns>Address_Line_4__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>County__c</columns>
        <columns>Country__c</columns>
        <columns>Entity_Account__c</columns>
        <columns>Owner_Account__c</columns>
        <columns>General_Contractor_Account__c</columns>
        <columns>Warehouse_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Equipment_Addresses</fullName>
        <columns>NAME</columns>
        <columns>Address_Line_1__c</columns>
        <columns>Address_Line_2__c</columns>
        <columns>Address_Line_3__c</columns>
        <columns>Address_Line_4__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Entity_Account__c</columns>
        <columns>Warehouse_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Address__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Equipment Addresses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Is_Primary_Bill_To</fullName>
        <columns>NAME</columns>
        <columns>Address_Line_1__c</columns>
        <columns>Address_Line_2__c</columns>
        <columns>Address_Line_3__c</columns>
        <columns>Address_Line_4__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Entity_Account__c</columns>
        <columns>Warehouse_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Primary_Billto__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Is Primary Bill To</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <description>This record type if for all records created by SFDC Users.</description>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Integration</fullName>
        <active>true</active>
        <description>Use this record type for system integration data that requires Read Only access.</description>
        <label>SFDC Integration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Address_StateProvince_ZipPostalCode</fullName>
        <active>false</active>
        <description>Requires the State/Province and Zip/Postal Code for SFDC created Addresses when Country = US or Canada.</description>
        <errorConditionFormula>( ISPICKVAL(State_Province__c, &quot;&quot;) || (  Postal_Code__c = &quot;&quot; )) &amp;&amp;(RecordTypeId = &quot;012C0000000HrB3&quot;)  &amp;&amp; 

(CASE(Country__c, &quot;US&quot;, 1, 
&quot;us&quot;, 1,
&quot;Us&quot;,1, 
&quot;uS&quot;, 1, 
&quot;U.S.&quot;, 1, 
&quot;U.s.&quot;, 1, 
&quot;u.S.&quot;, 1, 
&quot;u.s.&quot;,1, 
&quot;USA&quot; ,1, 
&quot;Usa&quot;, 1, 
&quot;USa&quot;,1, 
&quot;usa&quot;,1, 
&quot;U.S.A&quot;,1, 
&quot;United States&quot;,1, 
&quot;United states&quot;,1, 
&quot;united States&quot;,1, 
&quot;united states&quot; ,1,
&quot;UNITED STATES&quot;,1, 
&quot;United States of America&quot; ,1,
&quot;united states of america&quot;,1,
&quot;CA&quot;,1,
&quot;Ca&quot;,1,
&quot;cA&quot;,1,
&quot;ca&quot; ,1, 
&quot;C.A.&quot;,1, 
&quot;C.a.&quot;,1,
&quot;c.A.&quot;,1,
&quot;c.a.&quot;,1,
&quot;CAN&quot;,1,
&quot;CAn&quot;,1,
&quot;Can&quot;,1, 
&quot;can&quot;,1, 
&quot;C.A.N.&quot;,1,
&quot;C.A.n.&quot;,1,
&quot;C.a.n.&quot;,1,
&quot;c.a.n.&quot;,1,
&quot;Canada&quot;,1,
&quot;Canada&quot;,1,
&quot;CANADA&quot;,1,0)&lt;1)</errorConditionFormula>
        <errorMessage>Enter the State/Province and Zip/Postal Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_ISO_Code_Validation</fullName>
        <active>false</active>
        <description>This validates whether the entered Country ISO code is valid or not.</description>
        <errorConditionFormula>$User.Alias != &quot;ajunu&quot; &amp;&amp; NOT( CONTAINS(&quot;AFG:ALA:ALB:DZA:AND:AGO:AIA:ATA:ATG:ARG:ARM:ABW:AUS:AUT:AZE:&quot;&amp;
&quot;BHS:BHR:BGD:BRB:BLR:BEL:BLZ:BEN:BMU:BTN:BOL:BES:BIH:BWA:BVT:BRA:IOT:BRN:BGR:BFA:BDI:&quot;&amp;
&quot;CPV:KHM:CMR:CAN:CYM:CAF:TCD:CHL:CHN:CXR:CCK:COL:COM:COG:COD:COK:CRI:CIV:HRV:CUB:CUW:CYP:CZE:DNK:DJI:DMA:DOM:&quot;&amp;
&quot;ECU:EGY:SLV:GNQ:ERI:EST:ETH:FLK:FRO:FJI:FIN:FRA:GUF:PYF:ATF:GAB:GMB:GEO:DEU:GHA:GIB:GRC:GRL:GRD:GLP:GTM:GGY:GIN:GNB:GUY:&quot;&amp;
&quot;HTI:HMD:VAT:HND:HKG:HUN:ISL:IND:IDN:IRN:IRQ:IRL:IMN:ISR:ITA:JAM:JPN:JEY:JOR:KAZ:KEN:KIR:PRK:KOR:KWT:KGZ:&quot;&amp;
&quot;LAO:LVA:LBN:LSO:LBR:LBY:LIE:LTU:LUX:MAC:MKD:MDG:MWI:MYS:MDV:MLI:MLT:MTQ:MRT:MUS:MYT:MEX:MDA:MCO:MNG:MNE:MSR:MAR:MOZ:MMR:&quot;&amp;
&quot;NAM:NRU:NPL:NLD:NCL:NZL:NIC:NER:NGA:NIU:NFK:NOR:OMN:PAK:PSE:PAN:PNG:PRY:PER:PHL:PCN:POL:PRT:QAT:REU:ROU:RUS:RWA:BLM:&quot;&amp;
&quot;SHN:KNA:LCA:MAF:SPM:VCT:WSM:SMR:STP:SAU:SEN:SRB:SYC:SLE:SGP:SXM:SVK:SVN:SLB:SOM:ZAF:SGS:SSD:ESP:LKA:SDN:SUR:SJM:SWZ:SWE:CHE:SYR:&quot;&amp;
&quot;TWN:TJK:TZA:THA:TLS:TGO:TKL:TON:TTO:TUN:TUR:TKM:TCA:TUV:UGA:UKR:ARE:GBR:USA:URY:UZB:VUT:VEN:VNM:VGB:WLF:ESH:YEM:ZMB:ZWE:&quot;, Country_ISO_Code__c )) &amp;&amp;   RecordType.Name = &quot;Address&quot;</errorConditionFormula>
        <errorDisplayField>Country_ISO_Code__c</errorDisplayField>
        <errorMessage>Invalid Country ISO Code. Please enter a valid ISO code for selected Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partial_Address_Validation</fullName>
        <active>true</active>
        <description>This Validation requires Address_Line_1__c, City__c, Country__c and State__c.</description>
        <errorConditionFormula>$Profile.Id != &quot;00eC0000001GSlm&quot; &amp;&amp;  $Profile.Id != &quot;00eC0000001GSlh&quot;

&amp;&amp;
if( ISBLANK( Address_Line_1__c ) &amp;&amp; ISBLANK( City__c ) &amp;&amp; ISBLANK( TEXT(Country__c) ) &amp;&amp;  
(CONTAINS(&quot;United States:Antigua and Barbuda:Argentina:Australia:Barbados:Bolivia&apos;,&apos; Plurinational State of:Bonaire&apos;,&apos; Sint Eustatius and Saba:Brazil:Bahamas:Belize:Canada:Chile:China: Colombia:Costa Rica:Dominica:Dominican Republic:Ecuador:Grenada:Guatemala:Guyana:Honduras:Haiti:Ireland:India:Jamaica:Saint Kitts and Nevis:Saint Lucia:Mexico:Nicaragua :Panama:Peru:Paraguay:Suriname:El Salvador:Trinidad and Tobago:Uruguay:Saint Vincent and the Grenadines:Venezuela&apos;,&apos; Bolivarian Republic of&quot;, TEXT(Country__c) ) &amp;&amp;ISPICKVAL(State_Province__c, &quot;&quot;)) , FALSE,

if( !ISBLANK( Address_Line_1__c ) &amp;&amp; !ISBLANK( City__c ) &amp;&amp; !ISBLANK( TEXT(Country__c) ) &amp;&amp;  
!(CONTAINS(&quot;United States:Antigua and Barbuda:Argentina:Australia:Barbados:Bolivia&apos;,&apos; Plurinational State of:Bonaire&apos;,&apos; Sint Eustatius and Saba:Brazil:Bahamas:Belize:Canada:Chile:China: Colombia:Costa Rica:Dominica:Dominican Republic:Ecuador:Grenada:Guatemala:Guyana:Honduras:Haiti:Ireland:India:Jamaica:Saint Kitts and Nevis:Saint Lucia:Mexico:Nicaragua :Panama:Peru:Paraguay:Suriname:El Salvador:Trinidad and Tobago:Uruguay:Saint Vincent and the Grenadines:Venezuela&apos;,&apos; Bolivarian Republic of&quot;,  TEXT(Country__c) ) &amp;&amp;ISPICKVAL(State_Province__c, &quot;&quot;)) , FALSE,TRUE))</errorConditionFormula>
        <errorDisplayField>Entity_Account__c</errorDisplayField>
        <errorMessage>Please enter Address Line 1, City, Country and State(If listed).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_ISO_Code_Validation</fullName>
        <active>false</active>
        <description>This validates whether the entered State ISO code is valid or not.</description>
        <errorConditionFormula>RecordType.Name = &quot;Address&quot; &amp;&amp; 

 (ISNEW() ||    (ISCHANGED( Country__c ) &amp;&amp;ISBLANK( State_Province_ISO_Code__c )) || (!ISCHANGED( Country__c ) &amp;&amp;ISBLANK( TEXT( State_Province__c) )))&amp;&amp; 

  IF( Text(Country__c) = &quot;United States&quot;,       
      NOT(CONTAINS(&quot;AS:FM:GU:MH:MP:PW:PR:UM:VI:AL:AK:AZ:AR:AA:AE:AP:CA:CO:CT:DE:DC:FL:GA:HI:ID:IL:IN:IA:KS:KY:LA:&quot; &amp; 
          &quot;ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:WA:WV:WI:WY:&quot;, State_Province_ISO_Code__c )),

      IF( Text(Country__c) = &quot;Canada&quot;, 
          NOT(CONTAINS(&quot;AB:BC:MB:NB:NL:NT:NS:NU:ON:PE:QC:SK:YT:&quot;, State_Province_ISO_Code__c )),

          IF( Text(Country__c) = &quot;Mexico&quot;, 
              NOT(CONTAINS(&quot;AGU:BCN:BCS:CAM:CHP:CHH:COA:COL:DIF:DUR:GUA:GRO:HID:JAL:MEX:MIC:MOR:NAY:NLE:OAX:&quot;&amp;
                  &quot;PUE:QUE:ROO:SLP:SIN:SON:TAB:TAM:TLA:VER:YUC:ZAC:&quot;, State_Province_ISO_Code__c )),

              IF( Text(Country__c) = &quot;Brazil&quot;, 
                  NOT(CONTAINS(&quot;AC:AL:AM:AP:BA:CE:DF:ES:GO:MA:MG:MS:MT:&quot;&amp; 
                      &quot;PA:PB:PE:PI:PR:RJ:RN:RO:RR:RS:SC:SE:SP:TO:&quot;, State_Province_ISO_Code__c )),

                  IF( Text(Country__c) = &quot;Ireland&quot;, 
                      NOT(CONTAINS(&quot;CW:CN:CE:CO:DL:D:G:KY:KE:KK:LS:LM:LK:LD:LH:MO:MH:MN:OY:RN:SO:TA:WD:WH:WX:WW:&quot;, State_Province_ISO_Code__c )),

                      IF( Text(Country__c) = &quot;Australia&quot;, 
                          NOT(CONTAINS(&quot;ACT:NSW:NT:QLD:SA:TAS:VIC:WA:&quot;, State_Province_ISO_Code__c )),

                          IF( Text(Country__c) = &quot;India&quot;, 
                              NOT(CONTAINS(&quot;AN:AP:AR:AS:BR:CH:CT:DD:DL:DN:GA:GJ:HP:HR:JH:JK:KA:KL:LD:&quot;&amp;
                                  &quot;MH:ML:MN:MP:MZ:NL:OR:PB:PY:RJ:SK:TN:TR:UP:UT:WB:&quot;, State_Province_ISO_Code__c )),

                              IF( Text(Country__c) = &quot;China&quot;, 
                                  NOT(CONTAINS(&quot;34:11:71:50:35:62:44:45:52:46:13:23:41:91:42:43:32:36:22:21:92:&quot;&amp;
                                  &quot;15:64:63:61:37:31:14:51:12:65:54:53:33:&quot;, State_Province_ISO_Code__c )),

                                   FALSE 
                                 )
                            )
                         ) 
                     )
                  )
             ) 
         )
    )</errorConditionFormula>
        <errorMessage>Please enter a valid State/Province ISO Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Postal_Code</fullName>
        <active>true</active>
        <description>The Zip/Postal Code is required (under the Address Information).</description>
        <errorConditionFormula>IF ($User.Id == &apos;005C0000003N8XL&apos;, false, 
IF ($User.Id == &apos;005C0000005kwrQ&apos;, false, 
IF ($User.Id == &apos;005C0000005kwr6&apos;, false, 
IF ($User.Id == &apos;0051A00000DGYxJ&apos;, false, 
(ISBLANK(Postal_Code__c))))))</errorConditionFormula>
        <errorDisplayField>Postal_Code__c</errorDisplayField>
        <errorMessage>The Zip/Postal Code is required (under the Address Information).</errorMessage>
    </validationRules>
</CustomObject>